// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextLaunchCard renders correctly with an image 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#00adf1",
        "borderRadius": 40,
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "space-between",
        "marginBottom": 22,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 16,
        "overflow": "hidden",
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://example.com/img.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0.95,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignSelf": "flex-end",
          "backgroundColor": "#fff",
          "borderRadius": 10,
          "marginBottom": 20,
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": 20,
          "paddingBottom": 7,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 7,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#00adf1",
            "fontSize": 20,
          },
        ]
      }
    >
      lspName
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#00adf1",
          "borderRadius": 50,
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginBottom": 10,
          "marginLeft": 25,
          "marginRight": 25,
          "marginTop": 10,
          "paddingBottom": 15,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        days
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        hours
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        minutes
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        seconds
      </Text>
    </View>
  </View>
</View>
`;

exports[`NextLaunchCard renders correctly without an image 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#00adf1",
        "borderRadius": 40,
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "space-between",
        "marginBottom": 22,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 16,
        "overflow": "hidden",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "flex-end",
          "backgroundColor": "#fff",
          "borderRadius": 10,
          "marginBottom": 20,
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": 20,
          "paddingBottom": 7,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 7,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#00adf1",
            "fontSize": 20,
          },
        ]
      }
    >
      lspName
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#00adf1",
          "borderRadius": 50,
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginBottom": 10,
          "marginLeft": 25,
          "marginRight": 25,
          "marginTop": 10,
          "paddingBottom": 15,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        days
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        hours
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        minutes
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 22,
              "fontWeight": "bold",
            },
          ]
        }
      >
        -
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#c6ced9",
              "fontSize": 10,
              "fontWeight": "bold",
            },
          ]
        }
      >
        seconds
      </Text>
    </View>
  </View>
</View>
`;
